修复若干考试中心的Bug 优化验证码,去掉分不清的 I,1,0,O

--- a/FTWeb/ViewV5/AppPage/KSGL/KSAP.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/KSAP.html
@@ -15,13 +15,13 @@
                     </div>
                 </li>
                 <li class="add-item add-width fl-left">
-                    <label class="add-item-label"><i>*</i>考试时长(分钟)</label>
+                    <label class="add-item-label"><i>*</i>时长(分钟)</label>
                     <div class="add-ic">
                         <input type="text" class="form-control szhl_Int  szhl_require" ms-duplex="modelData.KSSC">
                     </div>
                 </li>
                 <li class="add-item add-width fl-right">
-                    <label class="add-item-label">可延长时间(分钟)</label>
+                    <label class="add-item-label">可延长时间</label>
                     <div class="add-ic">
                         <input type="text" class="form-control szhl_Int" ms-duplex="modelData.YCSY">
                     </div>
