--- a/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
@@ -113,7 +113,7 @@
             tempindex.GetLIST();
         }, ChangeMenu: function (el) { 
             model.initobj = el.ID;
-            model.PageCodeRdm = "AppPage/KSGL/TKSTLIST.html?r=" + model.rdm; 
+            model.PageCode = "AppPage/KSGL/TKSTLIST"; 
         },
         GetLIST: function () {
             model.page.pageindex = 1;
