--- a/FTWeb/ViewV5/AppPage/KSGL/SJGLLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/SJGLLIST.html
@@ -61,7 +61,7 @@
                             <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑"  ms-click="EditSJGL(el.ID)">
                                 <i class="iconfont icon-bianji"></i>
                             </a>
-                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="发布"  ms-click="KSRELEASE(el)">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" ms-if="el.Status!=1" title="发布" ms-click="KSRELEASE(el)">
                                 <i class="iconfont icon-fabu"></i>
                             </a>
                             <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.Status!=1" ms-click="DeleteView(el,$event)">
