--- a/FTWeb/ViewV5/AppPage/KSGL/kc-look.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/kc-look.html
@@ -4,8 +4,183 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_ug9f5r880f36usor.css">
+    <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/animate.css">
+    <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/default.css">
+    <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/index.css">
+
 </head>
 <body>
-    xasxs
+    <div class="detail-box">
+        <div class="clearfix detail-title">
+            <div class="pull-left">
+                <div class="course-img">
+                    <img src="/ViewV5/images/course-bg.png">
+                    <div class="default-text">
+                        <p>综合安检人员培训第一节</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pull-left kc-detial">
+                <h3 class="c333 ft24 mb15 mt20">综合安检人员培训第一节</h3>
+                <div><span>课件数量：1个</span></div>
+                <div><span>学时：1:3:50</span></div>
+                <div><span>专业：安全</span></div>
+                <div><span>主讲人：万晓林</span>(高级工程师)</div>
+                <div>
+                    <span>
+                        学习进度：
+
+                    </span>
+                </div>
+                <p class="btn-kx">
+                    <a class="btn btn-primary btn-lg mb10" ms-attr-href="/ViewV4/AppPage/PXGL/kj/index.html?id={{KJData[0].ID}}" target="_blank" href="/ViewV4/AppPage/PXGL/kj/index.html?id=97">开始学习</a><br>
+                    <a class="btn btn-warning btn-lg" target="_blank" href="/XYView/KS/KCKS.html?kcId=26" style="display: none;">课程练习</a>
+                </p>
+            </div>
+        </div>
+
+
+        <div class="panel-all mt20">
+            <div class="tab-box">
+                <ul>
+                    <li class="active">
+                        <a>课程介绍</a>
+                    </li>
+                    <li>
+                        <a>课程列表</a>
+                    </li>
+                    <li>
+                        <a>考试列表</a>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="detail-text">
+                <h2 class="panel-title pt20 pb20">
+                    <span class="mr5"><img src="/ViewV5/images/icon-2.png"></span>
+                    课程介绍
+                </h2>
+                <div class="detail-list">
+                    <p class="detail-js">
+                        <span id="it">
+                            fdejfioewf<span>
+                                <a href="javascript:;" onclick="cg()">修改</a>
+
+                                随着我国经济的发展，电力系统正在朝着超高压、大电网、大容量、自动化的方向发展。安全问题非常重要。那么，如何对正在运行的电力设备进行在线监测，如何通过实时数据对设备质量、运行环境、设备运营、负荷等进行科学分析，这些都是电力系统中迫切需要解决的问题。<br />
+                                更多具体的案例就不多说了，我想说的是，电力防火防爆问题，不能再局限于被动防卫的局面了，要利用科技手段预防。但是在目前通常的情况下，许多企业还没有认识到这件事的重要性，以至于出现事故，后悔不已。<br />
+                                电力设施/设备在线测温必要性<br />
+                                一、电力接头松动：电力设备导电连接处、插接处在运行中引起接触状态的改变是不可避免的，温度超高也不可避免，只有通过该处温度在线监测才能反映其状态。因此推广应用温度在线监测产品非常必要。<br />
+                                二、电力高温超标：电力设备工作时，各部件正常发热不应超过其最高允许温度，才能保证安全运行。温度是衡量电气设备运行状态的重要参数之一。<br />
+                                三、元件损耗发热：电力设备载流回路的触头（接插处）和连接处因电磨损、机械操作、短路电动力引起的机械振动和连接处的热胀冷缩引起的蠕动、氧化等引起接触状态的改变是固有的不可避免的。<br />
+                    </p>
+                </div>
+                <h2 class="panel-title pt20 pb20">
+                    <span class="mr5"><img src="/ViewV5/images/icon-2.png"></span>
+                    课程列表
+                </h2>
+                <div class="detail-list">
+                    <div class="detail-kc">
+                        <span class="detail-kc-bt pull-left">第1节</span>
+                        <span class="ml15">
+                            <img src="/ViewV5/images/icon-3.png" class="mr5">
+                            综合安检人员培训第一节   （时长1：20：32）
+                        </span>
+                    </div>
+                    <div class="detail-kc">
+                        <span class="detail-kc-bt pull-left">第2节</span>
+                        <span class="ml15">
+                            <img src="/ViewV5/images/icon-3.png" class="mr5">
+                            综合安检人员培训第一节   （时长1：20：32）
+                        </span>
+                    </div>
+                    <div class="detail-kc">
+                        <span class="detail-kc-bt pull-left">第3节</span>
+                        <span class="ml15">
+                            <img src="/ViewV5/images/icon-3.png" class="mr5">
+                            综合安检人员培训第一节   （时长1：20：32）
+                        </span>
+                    </div>
+                </div>
+                <h2 class="panel-title pt20 pb20">
+                    <span class="mr5"><img src="/ViewV5/images/icon-2.png"></span>
+                    考试列表
+                </h2>
+
+                <div class="clearfix course_nr">
+                    <ul class="course_nr2 clearfix">
+                        <li class="clearfix">
+                            <div class="cursor-pic">
+                                <div class="white">
+                                    <img src="/ViewV5/images/time-z.png">
+                                </div>
+                                <span class="fs">
+                                    85.3
+                                </span>
+                            </div>
+                            <p class="course-text">2016/04/01<br />09:00</p>
+                        </li>
+                        <li class="clearfix">
+                            <div class="cursor-pic">
+                                <div class="white">
+                                    <img src="/ViewV5/images/time-z.png">
+                                </div>
+                                <span class="fs">
+                                    85.3
+                                </span>
+                            </div>
+                            <p class="course-text">2016/04/01<br />09:00</p>
+                        </li>
+                        <li class="clearfix">
+                            <div class="cursor-pic">
+                                <div class="white">
+                                    <img src="/ViewV5/images/time-z.png">
+                                </div>
+                                <span class="fs">
+                                    85.3
+                                </span>
+                            </div>
+                            <p class="course-text">2016/04/01<br />09:00</p>
+                        </li>
+                        <li class="clearfix">
+                            <div class="cursor-pic">
+                                <div class="white">
+                                    <img src="/ViewV5/images/time-z.png">
+                                </div>
+                                <span class="fs">
+                                    85.3
+                                </span>
+                            </div>
+                            <p class="course-text">2016/04/01<br />09:00</p>
+                        </li>
+                        <li class="clearfix">
+                            <div class="cursor-pic">
+                                <div class="white">
+                                    <img src="/ViewV5/images/time-z.png">
+                                </div>
+                                <span class="fs">
+                                    85.3
+                                </span>
+                            </div>
+                            <p class="course-text">2016/04/01<br />09:00</p>
+                        </li>
+                        <li class="clearfix">
+                            <div class="cursor-pic">
+                                <div class="white">
+                                    <img src="/ViewV5/images/time-z.png">
+                                </div>
+                                <span class="fs">
+                                    85.3
+                                </span>
+                            </div>
+                            <p class="course-text">2016/04/01<br />09:00</p>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
