--- a/FTWeb/ViewV5/AppPage/KSGL/kc-look.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/kc-look.html
@@ -30,9 +30,14 @@
                 <div><span>主讲人：万晓林</span>(高级工程师)</div>
                 <div>
                     <span>
-                        学习进度：
-
+                        学习进度： 3.97%
                     </span>
+                    <div class="progress mb15" style="background-color: #ccc;">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 3.97%;">
+                        </div>
+                    </div>
+
+
                 </div>
                 <p class="btn-kx">
                     <a class="btn btn-primary btn-lg mb10" ms-attr-href="/ViewV4/AppPage/PXGL/kj/index.html?id={{KJData[0].ID}}" target="_blank" href="/ViewV4/AppPage/PXGL/kj/index.html?id=97">开始学习</a><br>
@@ -165,18 +170,7 @@
                             </div>
                             <p class="course-text">2016/04/01<br />09:00</p>
                         </li>
-                        <li class="clearfix">
-                            <div class="cursor-pic">
-                                <div class="white">
-                                    <img src="/ViewV5/images/time-z.png">
-                                </div>
-                                <span class="fs">
-                                    85.3
-                                </span>
-                            </div>
-                            <p class="course-text">2016/04/01<br />09:00</p>
-                        </li>
-
+                        
                     </ul>
                 </div>
             </div>
