--- a/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
@@ -60,7 +60,7 @@
                                 <i class="iconfont icon-bianji"></i>
                             </a> 
                             <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="试题管理" ms-click="ChangeMenu(el)">
-                                <i class="iconfont icon-bianji"></i>
+                                <i class="iconfont icon-htgl"></i>
                             </a>
                             <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-click="DeleteView(el,$event)">
                                 <i class="iconfont icon-shanchu"></i>
